# Cpp_Game_of_Life

./: .gitignore  CMakeLists.txt  README.md  main.cpp
header/: Cell.h  Grid.h
source/: Cell.cpp  Grid.cpp
